[FIX] 5px cssmenu arrow top spacing doesn't work because theme font size varies, so there's no point in overriding cssmenus.css.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@45480 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/design.css
+++ b/styles/layout/design.css
@@ -108,9 +108,6 @@ input[type=submit] {
 	padding-left: .5em;
 	text-decoration: none;
 }
-.cssmenu_vert .sf-sub-indicator {
-	top: 3px; /* the default arrow is 10px high, so 16px-10px/2 */
-}
 
 .iconmenu {
 	display: inline;
